# egeResults

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  Dockerfile  README.md  compose.yaml  pyproject.toml  мурмяу.csv
.github/workflows/: ci.yml
fixtures/: results.json
render-takumi/: Dockerfile  README.md  package.json  tsconfig.json
render-takumi/src/: cards.tsx  fonts.ts  server.tsx
scripts/: fix_last_names.py  import_students.py
src/ege_notifier/: __init__.py  __main__.py  config.py  db.py  logging_setup.py  scheduler.py  security.py  utils.py
src/ege_notifier/bot/: factory.py  keyboards.py  states.py  texts.py  ui.py  validators.py
src/ege_notifier/bot/handlers/: __init__.py  add_student.py  admin.py  common.py  my_students.py
src/ege_notifier/models/: __init__.py  share_token.py  site_state.py  student.py  subscription.py  user.py
src/ege_notifier/providers/: __init__.py  _http.py  base.py  ege_spb.py  ege_spb_overview.py  mock.py
src/ege_notifier/services/: blanks.py  cards.py  diff.py  monitor.py  notifier.py  ranking.py  results.py  subscriptions.py
tests/: test_admin.py  test_cards.py  test_diff.py  test_ege_spb.py  test_ege_spb_overview.py  test_factory.py  test_handlers.py  test_mock_provider.py  test_monitor.py  test_notifier.py  test_ranking.py  test_results.py  test_security.py  test_services_integration.py  test_student_data_ui.py  test_texts.py  test_texts_announcement.py  test_utils.py  test_validators.py
tests/fixtures/: ege_spb_overview.html  ege_spb_sample.html
