[project]
name = "egeresults"
version = "0.1.0"
description = "Telegram-бот, который отслеживает появление результатов ЕГЭ на ege.spb.ru и уведомляет подписчиков"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4",
    "beanie==2.1.0",
    "pymongo>=4.9,<5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "cryptography>=42",
    "beautifulsoup4>=4.14.3",
]

[project.scripts]
ege-notifier = "ege_notifier.__main__:run"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ege_notifier"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
